--- a/ular-last/contacts.html
+++ b/ular-last/contacts.html
@@ -155,7 +155,7 @@
       </div>
    </div>
 
-   <div class="contacts__map">
+   <div id="map" class="contacts__map">
       <img src="././img/contacts/map.png" alt="map photo">
    </div>
 </section>
