added mobile menu and a little adaptive

--- a/ular-last/partners.html
+++ b/ular-last/partners.html
@@ -20,84 +20,235 @@
 
    <div class="header__right">
       <nav class="header__nav">
-         <ul class="primary-menu nav__list">
-            <li class="nav__item menu-item">
-               <a
-                  href="./about-us.html"
-                  class="nav__link menu-item__link"
-               >
-                  Про компанію
-               </a>
-            </li>
+   <ul class="primary-menu nav__list">
+      <li class="nav__item menu-item">
+         <a
+            href="./about-us.html"
+            class="nav__link menu-item__link"
+         >
+            Про компанію
+         </a>
+      </li>
 
-            <li class="nav__item menu-item">
-               <a
-                  href="./products.html"
-                  class="nav__link menu-item__link"
-               >
-                  Продукція
-               </a>
-            </li>
+      <li class="nav__item menu-item">
+         <a
+            href="./products.html"
+            class="nav__link menu-item__link"
+         >
+            Продукція
+         </a>
+      </li>
 
-            <li class="nav__item menu-item">
-               <a
-                  href="./gallery.html"
-                  class="nav__link menu-item__link"
-               >
-                  Галерея
-               </a>
-            </li>
+      <li class="nav__item menu-item">
+         <a
+            href="./gallery.html"
+            class="nav__link menu-item__link"
+         >
+            Галерея
+         </a>
+      </li>
 
-            <li class="nav__item menu-item">
-               <a
-                  href="./contacts.html"
-                  class="nav__link menu-item__link"
-               >
-                  Контакти
-               </a>
-            </li>
+      <li class="nav__item menu-item">
+         <a
+            href="./contacts.html"
+            class="nav__link menu-item__link"
+         >
+            Контакти
+         </a>
+      </li>
 
-            <li class="nav__item menu-item">
-               <a
-                  href="./tenders.html"
-                  class="nav__link menu-item__link"
-               >
-                  Тендери
-               </a>
-            </li>
+      <li class="nav__item menu-item">
+         <a
+            href="./tenders.html"
+            class="nav__link menu-item__link"
+         >
+            Тендери
+         </a>
+      </li>
 
-            <li class="nav__item menu-item">
-               <a
-                  href="./partners.html"
-                  class="nav__link menu-item__link"
-               >
-                  Партнери
-               </a>
-            </li>
+      <li class="nav__item menu-item">
+         <a
+            href="./partners.html"
+            class="nav__link menu-item__link"
+         >
+            Партнери
+         </a>
+      </li>
 
-            <li class="nav__item menu-item">
-               <a
-                  href="./vacancy.html"
-                  class="nav__link menu-item__link"
-               >
-                  Вакансії
-               </a>
-            </li>
-         </ul>
-      </nav>
+      <li class="nav__item menu-item">
+         <a
+            href="./vacancy.html"
+            class="nav__link menu-item__link"
+         >
+            Вакансії
+         </a>
+      </li>
+   </ul>
+</nav>
 
       <div class="header__lang lang">
          <div class="lang__active">
             <span class="lang__arrow"></span>
-            <p class="lang__item">UA</p>
+            <a href="#" class="lang__item">UA</a>
          </div>
          <div class="lang__active--none">
-            <p class="lang__item">RU</p>
-            <p class="lang__item">EN</p>
+            <a href="#" class="lang__item">RU</a>
+            <a href="#" class="lang__item">EN</a>
          </div>
       </div>
    </div>
+
+   <div class="header__mobile">
+      <span></span>
+      <span></span>
+      <p>Меню</p>
+   </div>
 </header>
+
+<div class="mobile">
+   <div class="mobile__top">
+      <nav class="header__nav">
+   <ul class="primary-menu nav__list">
+      <li class="nav__item menu-item">
+         <a
+            href="./about-us.html"
+            class="nav__link menu-item__link"
+         >
+            Про компанію
+         </a>
+      </li>
+
+      <li class="nav__item menu-item">
+         <a
+            href="./products.html"
+            class="nav__link menu-item__link"
+         >
+            Продукція
+         </a>
+      </li>
+
+      <li class="nav__item menu-item">
+         <a
+            href="./gallery.html"
+            class="nav__link menu-item__link"
+         >
+            Галерея
+         </a>
+      </li>
+
+      <li class="nav__item menu-item">
+         <a
+            href="./contacts.html"
+            class="nav__link menu-item__link"
+         >
+            Контакти
+         </a>
+      </li>
+
+      <li class="nav__item menu-item">
+         <a
+            href="./tenders.html"
+            class="nav__link menu-item__link"
+         >
+            Тендери
+         </a>
+      </li>
+
+      <li class="nav__item menu-item">
+         <a
+            href="./partners.html"
+            class="nav__link menu-item__link"
+         >
+            Партнери
+         </a>
+      </li>
+
+      <li class="nav__item menu-item">
+         <a
+            href="./vacancy.html"
+            class="nav__link menu-item__link"
+         >
+            Вакансії
+         </a>
+      </li>
+   </ul>
+</nav>
+
+      <div class="mobile__lang">
+         <a href="#" class="active">UA</a>
+         <a href="#">RU</a>
+         <a href="#">EN</a>
+      </div>
+   </div>
+
+   <div class="head__others">
+   <h3 class="head__heading heading">
+     Наші компанії
+   </h3>
+
+   <div class="head__list">
+
+     <a href="http://google.com" class="head__item">
+       <img src="././img/home/header-link-photo--1.jpg" alt="list photo">
+
+       <div class="head__item-text">
+           <p>Зерновий елеватор</p>
+       </div>
+     </a>
+
+     <a href="#" class="head__item">
+       <img src="././img/home/header-link-photo--2.png" alt="list photo">
+       <div class="head__item-text">
+           <p>Інкубація</p>
+       </div>
+     </a>
+
+     <a href="#" class="head__item">
+       <img src="././img/home/header-link-photo--3.png" alt="list photo">
+       <div class="head__item-text">
+           <p>Виробництво комбікормів</p>
+       </div>
+     </a>
+
+     <a href="#" class="head__item">
+       <img src="././img/home/header-link-photo--4.png" alt="list photo">
+       <div class="head__item-text">
+           <p>Вирощування зернових та олійних культур</p>
+       </div>
+     </a>
+   </div>
+</div>
+
+   <div class="mobile__contacts">
+      <div class="contact-form__phone contact-form__item">
+       <span class="icon-phone icon"></span>
+       <a
+         href="tel:+38 (032)242 11 17"
+         class="contact-form__link"
+       >
+         +38 (032)242 11 17
+       </a>
+      </div>
+
+      <div class="contact-form__address contact-form__item">
+          <span class="icon-address icon"></span>
+          <p>
+            81646, Львівська обл., Миколаївський р-н,
+            с. Київець, вул. Наддністрянська, 157
+          </p>
+      </div>
+
+      <div class="contact-form__email contact-form__item">
+         <span class="icon-email icon"></span>
+          <a
+            href="mailto:office@ular.lviv.ua"
+            class="contact-form__link"
+          >
+            office@ular.lviv.ua
+          </a>
+      </div>
+   </div>
+</div>
 
    <main class="main">
       <section class="section partners section--head">
