adaptive page home done

--- a/ular-last/contacts.html
+++ b/ular-last/contacts.html
@@ -313,7 +313,7 @@
       <section class="section contact-form">
    <div class="contact-form__row">
      <div class="contact-form__text">
-       <h3 class="contact-form__heading heading">
+       <h3 class="contact-form__heading">
          Цікава співпраця з нами?
        </h3>
        <p class="contact-form__paragraph paragraph">
@@ -382,6 +382,8 @@
        Надіслати заявку
      </button>
    </form>
+
+   <div class="contact-form__adaptive"></div>
 </section>
    </main>
 
