--- a/ular-last/about-us.html
+++ b/ular-last/about-us.html
@@ -189,7 +189,7 @@
    <div class="head__list">
 
      <a href="http://google.com" class="head__item">
-       <img src="././img/home/header-link-photo--1.jpg" alt="list photo">
+       <img src="./img/home/header-link-photo--1.jpg" alt="list photo">
 
        <div class="head__item-text">
            <p>Зерновий елеватор</p>
@@ -197,21 +197,21 @@
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--2.png" alt="list photo">
+       <img src="./img/home/header-link-photo--2.png" alt="list photo">
        <div class="head__item-text">
            <p>Інкубація</p>
        </div>
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--3.png" alt="list photo">
+       <img src="./img/home/header-link-photo--3.png" alt="list photo">
        <div class="head__item-text">
            <p>Виробництво комбікормів</p>
        </div>
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--4.png" alt="list photo">
+       <img src="./img/home/header-link-photo--4.png" alt="list photo">
        <div class="head__item-text">
            <p>Вирощування зернових та олійних культур</p>
        </div>
@@ -251,6 +251,16 @@
 </div>
 
    <main class="main">
+      <div class="path">
+   <ul class="path__list">
+      <li class="info-text path__item">
+         <a href="./index.html">Головна</a>
+      </li>
+      <li class="info-text path__item">
+         <a href="#">Вакансії</a>
+      </li>
+   </ul>
+</div>
       <section class="section head about-us__head section--head">
    <div class="path">
    <ul class="path__list">
@@ -272,7 +282,7 @@
         Виробництво м’яса курчат бройлерів
       </h3>
 
-      <div class="head__text paragraph">
+      <div class="head__text paragraph about-us__text">
         <p>
            Фермерське господарство «Улар» з 2003-го року є провідним виробником та постачальником
            м’яса птиці в Україні. Птахокомплекси Господарства розташовані в шести районах Львівської
@@ -283,7 +293,7 @@
 
    <div class="head__photo">
       <img
-        src="././img/home/head-photo.png"
+        src="./img/home/head-photo.png"
         alt="Products"
         class="head__img"
       >
@@ -309,7 +319,7 @@
    <div class="photo-slider__slider slider">
      <div class="slider__item">
        <img
-         src="././img/products/1.png"
+         src="./img/products/1.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -317,7 +327,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/products/2.png"
+         src="./img/products/2.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -325,7 +335,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/products/3.png"
+         src="./img/products/3.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -333,7 +343,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/products/4.png"
+         src="./img/products/4.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -341,7 +351,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/products/1.png"
+         src="./img/products/1.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -349,7 +359,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/products/2.png"
+         src="./img/products/2.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -357,7 +367,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/products/3.png"
+         src="./img/products/3.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -365,7 +375,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/products/4.png"
+         src="./img/products/4.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -373,7 +383,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/products/1.png"
+         src="./img/products/1.png"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -387,7 +397,7 @@
       <section class="section awards">
    <ul class="awards__list">
       <li class="awards__item">
-         <img src="././img/iso220002005.png" alt="award icon">
+         <img src="./img/iso220002005.png" alt="award icon">
          <p>
             Сертифікат ISO 22000 : 2005 — Господарство успішно пройшло сертифікаційний аудит по системі
             менеджменту безпеки харчових продуктів
@@ -395,7 +405,7 @@
       </li>
 
       <li class="awards__item">
-         <img src="././img/halal.png" alt="award icon">
+         <img src="./img/halal.png" alt="award icon">
          <p>
             Сертифікат HALAL — єдиний документ, що дає можливість експортувати у країни арабсько-мусульманського світу та
             підтверджує, що продукт відповідає високим стандартам Шаріату
@@ -427,7 +437,7 @@
 
    <ul class="geography__list">
       <li class="geography__item">
-         <img src="././img/flag/UA.png" alt="">
+         <img src="./img/flag/UA.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Україна
@@ -436,7 +446,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="././img/flag/Mask Group.png" alt="">
+         <img src="./img/flag/Mask Group.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Молдова
@@ -445,7 +455,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="././img/flag/TR.png" alt="">
+         <img src="./img/flag/TR.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Туреччина
@@ -454,7 +464,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="././img/flag/AZ.png" alt="">
+         <img src="./img/flag/AZ.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Азербайджан
@@ -463,7 +473,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="././img/flag/EG.png" alt="">
+         <img src="./img/flag/EG.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Єгипет
@@ -472,7 +482,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="././img/flag/CN.png" alt="">
+         <img src="./img/flag/CN.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Китай
@@ -481,7 +491,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="././img/flag/VN.png" alt="">
+         <img src="./img/flag/VN.png" alt="">
          <div class="geography__text paragraph">
             <p>
                В’єтнам
@@ -490,7 +500,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="././img/flag/HK.png" alt="">
+         <img src="./img/flag/HK.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Гонгконг
@@ -499,7 +509,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="././img/flag/UZ.png" alt="">
+         <img src="./img/flag/UZ.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Узбекістан
@@ -508,7 +518,7 @@
       </li>
 
       <li class="geography__item">
-         <img src="././img/flag/IR.png" alt="">
+         <img src="./img/flag/IR.png" alt="">
          <div class="geography__text paragraph">
             <p>
                Ірак
