--- a/ular-last/contacts.html
+++ b/ular-last/contacts.html
@@ -189,7 +189,7 @@
    <div class="head__list">
 
      <a href="http://google.com" class="head__item">
-       <img src="././img/home/header-link-photo--1.jpg" alt="list photo">
+       <img src="./img/home/header-link-photo--1.jpg" alt="list photo">
 
        <div class="head__item-text">
            <p>Зерновий елеватор</p>
@@ -197,21 +197,21 @@
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--2.png" alt="list photo">
+       <img src="./img/home/header-link-photo--2.png" alt="list photo">
        <div class="head__item-text">
            <p>Інкубація</p>
        </div>
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--3.png" alt="list photo">
+       <img src="./img/home/header-link-photo--3.png" alt="list photo">
        <div class="head__item-text">
            <p>Виробництво комбікормів</p>
        </div>
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--4.png" alt="list photo">
+       <img src="./img/home/header-link-photo--4.png" alt="list photo">
        <div class="head__item-text">
            <p>Вирощування зернових та олійних культур</p>
        </div>
@@ -251,8 +251,6 @@
 </div>
 
    <main class="main">
-      <section class="section contacts section--head">
-   <div class="contacts__info">
       <div class="path">
    <ul class="path__list">
       <li class="info-text path__item">
@@ -263,7 +261,8 @@
       </li>
    </ul>
 </div>
-
+      <section class="section contacts section--head">
+   <div class="contacts__info">
       <h1 class="main-heading contacts__main-hading">
          Контакти
       </h1>
@@ -307,7 +306,7 @@
    </div>
 
    <div id="map" class="contacts__map">
-      <img src="././img/contacts/map.png" alt="map photo">
+      <img src="./img/contacts/map.png" alt="map photo">
    </div>
 </section>
       <section class="section contact-form">
