--- a/ular-last/index.html
+++ b/ular-last/index.html
@@ -191,7 +191,7 @@
    <div class="head__list">
 
      <a href="http://google.com" class="head__item">
-       <img src="././img/home/header-link-photo--1.jpg" alt="list photo">
+       <img src="./img/home/header-link-photo--1.jpg" alt="list photo">
 
        <div class="head__item-text">
            <p>Зерновий елеватор</p>
@@ -199,21 +199,21 @@
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--2.png" alt="list photo">
+       <img src="./img/home/header-link-photo--2.png" alt="list photo">
        <div class="head__item-text">
            <p>Інкубація</p>
        </div>
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--3.png" alt="list photo">
+       <img src="./img/home/header-link-photo--3.png" alt="list photo">
        <div class="head__item-text">
            <p>Виробництво комбікормів</p>
        </div>
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--4.png" alt="list photo">
+       <img src="./img/home/header-link-photo--4.png" alt="list photo">
        <div class="head__item-text">
            <p>Вирощування зернових та олійних культур</p>
        </div>
@@ -276,7 +276,7 @@
 
    <div class="head__photo">
       <img
-         src="././img/home/head-photo.png"
+         src="./img/home/head-photo.png"
          alt="Products"
          class="head__img"
       >
@@ -290,7 +290,7 @@
    <div class="head__list">
 
      <a href="http://google.com" class="head__item">
-       <img src="././img/home/header-link-photo--1.jpg" alt="list photo">
+       <img src="./img/home/header-link-photo--1.jpg" alt="list photo">
 
        <div class="head__item-text">
            <p>Зерновий елеватор</p>
@@ -298,21 +298,21 @@
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--2.png" alt="list photo">
+       <img src="./img/home/header-link-photo--2.png" alt="list photo">
        <div class="head__item-text">
            <p>Інкубація</p>
        </div>
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--3.png" alt="list photo">
+       <img src="./img/home/header-link-photo--3.png" alt="list photo">
        <div class="head__item-text">
            <p>Виробництво комбікормів</p>
        </div>
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--4.png" alt="list photo">
+       <img src="./img/home/header-link-photo--4.png" alt="list photo">
        <div class="head__item-text">
            <p>Вирощування зернових та олійних культур</p>
        </div>
@@ -325,7 +325,7 @@
      <li class="advantage__item">
        <div class="advantage__image">
          <img
-           src="././img/home/briliant-icon.png"
+           src="./img/home/briliant-icon.png"
            alt="chicken icon"
          >
        </div>
@@ -337,7 +337,7 @@
      <li class="advantage__item">
        <div class="advantage__image">
          <img
-           src="././img/home/food-icon.png"
+           src="./img/home/food-icon.png"
            alt="build icon"
          >
        </div>
@@ -349,7 +349,7 @@
      <li class="advantage__item">
        <div class="advantage__image">
          <img
-           src="././img/home/people-icon.png"
+           src="./img/home/people-icon.png"
            class="advantage__img"
          >
        </div>
@@ -379,7 +379,7 @@
    <div class="photo-slider__slider slider">
      <div class="slider__item">
        <img
-         src="././img/home/file.jpg"
+         src="./img/home/file.jpg"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -387,7 +387,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/home/file.jpg"
+         src="./img/home/file.jpg"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -395,7 +395,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/home/file.jpg"
+         src="./img/home/file.jpg"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -403,7 +403,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/home/file.jpg"
+         src="./img/home/file.jpg"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -411,7 +411,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/home/file.jpg"
+         src="./img/home/file.jpg"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -419,7 +419,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/home/file.jpg"
+         src="./img/home/file.jpg"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -427,7 +427,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/home/file.jpg"
+         src="./img/home/file.jpg"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -435,7 +435,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/home/file.jpg"
+         src="./img/home/file.jpg"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -443,7 +443,7 @@
 
      <div class="slider__item">
        <img
-         src="././img/home/file.jpg"
+         src="./img/home/file.jpg"
          alt="incubator photo"
          class="slider__photo"
        >
@@ -664,19 +664,19 @@
       <div class="our-products__photos photos">
          <div class="photos__item">
             <a href="./product.html">
-               <img src="././img/home/product-photo.png" alt="product-photo">
+               <img src="./img/home/product-photo.png" alt="product-photo">
             </a>
          </div>
 
          <div class="photos__item">
             <a href="./product.html">
-               <img src="././img/home/product-photo.png" alt="product-photo">
+               <img src="./img/home/product-photo.png" alt="product-photo">
             </a>
          </div>
 
          <div class="photos__item">
             <a href="./product.html">
-               <img src="././img/home/product-photo.png" alt="product-photo">
+               <img src="./img/home/product-photo.png" alt="product-photo">
             </a>
          </div>
       </div>
