--- a/ular-last/product.html
+++ b/ular-last/product.html
@@ -189,7 +189,7 @@
    <div class="head__list">
 
      <a href="http://google.com" class="head__item">
-       <img src="././img/home/header-link-photo--1.jpg" alt="list photo">
+       <img src="./img/home/header-link-photo--1.jpg" alt="list photo">
 
        <div class="head__item-text">
            <p>Зерновий елеватор</p>
@@ -197,21 +197,21 @@
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--2.png" alt="list photo">
+       <img src="./img/home/header-link-photo--2.png" alt="list photo">
        <div class="head__item-text">
            <p>Інкубація</p>
        </div>
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--3.png" alt="list photo">
+       <img src="./img/home/header-link-photo--3.png" alt="list photo">
        <div class="head__item-text">
            <p>Виробництво комбікормів</p>
        </div>
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--4.png" alt="list photo">
+       <img src="./img/home/header-link-photo--4.png" alt="list photo">
        <div class="head__item-text">
            <p>Вирощування зернових та олійних культур</p>
        </div>
@@ -263,7 +263,7 @@
 </div>
       <section class="section section--head product">
    <div class="product__photo">
-      <img src="././img/products/productBig.png" alt="product photo">
+      <img src="./img/products/productBig.png" alt="product photo">
    </div>
 
    <div class="product__info">
@@ -280,6 +280,8 @@
       <h1 class="main-heading product__main-heading">
          Курячi Крильця
       </h1>
+
+      <div class="product__photo"></div>
 
       <div class="description__paragraph paragraph product__description">
          <p>
@@ -431,7 +433,7 @@
       <div class="similar__item">
          <div class="similar__photo">
             <a href="./product.html">
-               <img src="././img/products/1.png" alt="">
+               <img src="./img/products/1.png" alt="">
             </a>
          </div>
 
@@ -445,7 +447,7 @@
       <div class="similar__item">
          <div class="similar__photo">
             <a href="./product.html">
-               <img src="././img/products/2.png" alt="">
+               <img src="./img/products/2.png" alt="">
             </a>
          </div>
 
@@ -460,7 +462,7 @@
       <div class="similar__item">
          <div class="similar__photo">
             <a href="./product.html">
-               <img src="././img/products/3.png" alt="">
+               <img src="./img/products/3.png" alt="">
             </a>
          </div>
 
@@ -474,7 +476,7 @@
       <div class="similar__item">
          <div class="similar__photo">
             <a href="./product.html">
-               <img src="././img/products/4.png" alt="">
+               <img src="./img/products/4.png" alt="">
             </a>
          </div>
 
@@ -488,7 +490,7 @@
       <div class="similar__item">
          <div class="similar__photo">
             <a href="./product.html">
-               <img src="././img/products/1.png" alt="">
+               <img src="./img/products/1.png" alt="">
             </a>
          </div>
 
@@ -503,7 +505,7 @@
       <div class="similar__item">
          <div class="similar__photo">
             <a href="./product.html">
-               <img src="././img/products/2.png" alt="">
+               <img src="./img/products/2.png" alt="">
             </a>
          </div>
 
@@ -517,7 +519,7 @@
       <div class="similar__item">
          <div class="similar__photo">
             <a href="./product.html">
-               <img src="././img/products/3.png" alt="">
+               <img src="./img/products/3.png" alt="">
             </a>
          </div>
 
@@ -531,7 +533,7 @@
       <div class="similar__item">
          <div class="similar__photo">
             <a href="./product.html">
-               <img src="././img/products/4.png" alt="">
+               <img src="./img/products/4.png" alt="">
             </a>
          </div>
 
@@ -546,7 +548,7 @@
       <div class="similar__item">
          <div class="similar__photo">
             <a href="./product.html">
-               <img src="././img/products/1.png" alt="">
+               <img src="./img/products/1.png" alt="">
             </a>
          </div>
 
