--- a/ular-last/tenders.html
+++ b/ular-last/tenders.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -189,7 +189,7 @@
    <div class="head__list">
 
      <a href="http://google.com" class="head__item">
-       <img src="././img/home/header-link-photo--1.jpg" alt="list photo">
+       <img src="./img/home/header-link-photo--1.jpg" alt="list photo">
 
        <div class="head__item-text">
            <p>Зерновий елеватор</p>
@@ -197,21 +197,21 @@
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--2.png" alt="list photo">
+       <img src="./img/home/header-link-photo--2.png" alt="list photo">
        <div class="head__item-text">
            <p>Інкубація</p>
        </div>
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--3.png" alt="list photo">
+       <img src="./img/home/header-link-photo--3.png" alt="list photo">
        <div class="head__item-text">
            <p>Виробництво комбікормів</p>
        </div>
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--4.png" alt="list photo">
+       <img src="./img/home/header-link-photo--4.png" alt="list photo">
        <div class="head__item-text">
            <p>Вирощування зернових та олійних культур</p>
        </div>
@@ -366,6 +366,13 @@
       placeholder="Пошук тендеру (№ чи назва)..."
    >
 </div>
+   </div>
+
+   <div class="tenders__adaptive-info">
+      <p>
+         Для того, щоб переглянути усю інформацію у таблиці, проскрольте екран вправо
+      </p>
+      <img src="./img/icons/scroll.svg" alt="scroll icon">
    </div>
 
    <div class="tenders__container">
