--- a/ular-last/partners.html
+++ b/ular-last/partners.html
@@ -189,7 +189,7 @@
    <div class="head__list">
 
      <a href="http://google.com" class="head__item">
-       <img src="././img/home/header-link-photo--1.jpg" alt="list photo">
+       <img src="./img/home/header-link-photo--1.jpg" alt="list photo">
 
        <div class="head__item-text">
            <p>Зерновий елеватор</p>
@@ -197,21 +197,21 @@
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--2.png" alt="list photo">
+       <img src="./img/home/header-link-photo--2.png" alt="list photo">
        <div class="head__item-text">
            <p>Інкубація</p>
        </div>
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--3.png" alt="list photo">
+       <img src="./img/home/header-link-photo--3.png" alt="list photo">
        <div class="head__item-text">
            <p>Виробництво комбікормів</p>
        </div>
      </a>
 
      <a href="#" class="head__item">
-       <img src="././img/home/header-link-photo--4.png" alt="list photo">
+       <img src="./img/home/header-link-photo--4.png" alt="list photo">
        <div class="head__item-text">
            <p>Вирощування зернових та олійних культур</p>
        </div>
@@ -251,8 +251,6 @@
 </div>
 
    <main class="main">
-      <section class="section partners section--head">
-   <div class="partners__info">
       <div class="path">
    <ul class="path__list">
       <li class="info-text path__item">
@@ -263,7 +261,8 @@
       </li>
    </ul>
 </div>
-
+      <section class="section partners section--head">
+   <div class="partners__info">
       <h1 class="main-heading partners__main-hading">
          Партнери
       </h1>
@@ -282,83 +281,83 @@
 
    <div class="partners__slider">
       <div class="partners__item">
-         <img src="././img/partners/atb.png" alt="partners logo">
+         <img src="./img/partners/atb.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/silpo.png" alt="partners logo">
+         <img src="./img/partners/silpo.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/arsen.png" alt="partners logo">
+         <img src="./img/partners/arsen.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/mhp.png" alt="partners logo">
+         <img src="./img/partners/mhp.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/raba.png" alt="partners logo">
+         <img src="./img/partners/raba.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/kovbaska.png" alt="partners logo">
+         <img src="./img/partners/kovbaska.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/atb.png" alt="partners logo">
+         <img src="./img/partners/atb.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/silpo.png" alt="partners logo">
+         <img src="./img/partners/silpo.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/arsen.png" alt="partners logo">
+         <img src="./img/partners/arsen.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/mhp.png" alt="partners logo">
+         <img src="./img/partners/mhp.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/raba.png" alt="partners logo">
+         <img src="./img/partners/raba.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/kovbaska.png" alt="partners logo">
+         <img src="./img/partners/kovbaska.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/atb.png" alt="partners logo">
+         <img src="./img/partners/atb.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/silpo.png" alt="partners logo">
+         <img src="./img/partners/silpo.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/arsen.png" alt="partners logo">
+         <img src="./img/partners/arsen.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/mhp.png" alt="partners logo">
+         <img src="./img/partners/mhp.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/raba.png" alt="partners logo">
+         <img src="./img/partners/raba.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/kovbaska.png" alt="partners logo">
+         <img src="./img/partners/kovbaska.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/atb.png" alt="partners logo">
+         <img src="./img/partners/atb.png" alt="partners logo">
       </div>
 
       <div class="partners__item">
-         <img src="././img/partners/silpo.png" alt="partners logo">
+         <img src="./img/partners/silpo.png" alt="partners logo">
       </div>
 
    </div>
