changed head photo

--- a/zern-culture/index.html
+++ b/zern-culture/index.html
@@ -140,7 +140,7 @@
 
    <div class="head__photo">
       <img
-         src="././img/head-photo.jpg"
+         src="././img/header-photo.jpg"
          alt="Products"
          class="head__img"
       >
