added info.pnh photo

--- a/mail/index.html
+++ b/mail/index.html
@@ -73,8 +73,11 @@
          padding-bottom: 54px;
       }
 
+      .header__left p {
+         line-height: 17px;
+      }
+
       .header__right img {
-         transform: translateY(43px);
       }
 
       .info__left {
@@ -83,6 +86,7 @@
       }
 
       .info__left h3 {
+         color: #000000;
          font-weight: bold;
          font-size: 24px;
          line-height: 29px;
@@ -90,6 +94,7 @@
       }
 
       .info__left p {
+         color: #000000;
          padding-top: 10px;
          font-weight: 500;
          font-size: 10px;
@@ -132,11 +137,11 @@
                               <table style="color: #ffffff;" width="290">
                                  <tr style="border-bottom: 1px solid #ffffff;">
                                     <td align="right">
-                                       <img src="./img/logo.png" alt="logo icon" />
+                                       <img src="https://raw.githubusercontent.com/zarva6596/zarva6596.github.io/master/mail/img/logo.png" alt="logo icon" />
                                     </td>
-                                    <td style="font-size: 22px;line-height: 31px;" width="170px">
-                                       <p style="font-family: 'Montserrat', sans-serif;">Лига</p>
-                                       <p style="font-family: 'Montserrat', sans-serif;">Мастеров</p>
+                                    <td style="font-size: 22px; line-height: 31px;" width="170px">
+                                       <h3 style="font-family: 'Montserrat', sans-serif;">Лига</p>
+                                       <p3 style="font-family: 'Montserrat', sans-serif;">Мастеров</p>
                                     </td>
                                  </tr>
                                  <tr>
@@ -162,7 +167,7 @@
                            </td>
 
                            <td align="left" class="header__right" width="280">
-                              <img align="left" src="./img/topPhoto.png" alt="header photo" class="header__photo" />
+                              <img align="left" src="https://raw.githubusercontent.com/zarva6596/zarva6596.github.io/master/mail/img/topPhoto.png" alt="header photo" class="header__photo" />
                            </td>
                         </tr>
                      </table>
@@ -192,9 +197,9 @@
                            </td>
 
                            <td class="info__right" bgcolor="#cd2020" width="280">
-                              <img src="./img/info.svg" alt="info img">
+                              <img src="https://raw.githubusercontent.com/zarva6596/zarva6596.github.io/master/mail/img/info.png" alt="info img" />
                               <p style="font-family: 'Montserrat', sans-serif;">
-                                 Не упустите свой шанс стать частью первого профессионального 
+                                 Не упустите свой шанс стать частью первого профессионального
                                  общества строителей Украины.
                               </p>
                            </td>
