--- a/mail/index.html
+++ b/mail/index.html
@@ -75,7 +75,13 @@
 
       .header__left {
          padding-top: 30px;
-         padding-bottom: 54px;
+         padding-bottom: 30px;
+         width: 320px;
+      }
+
+      .header__logo img {
+         background-color: #CD2020;
+         border-radius: 50%;
       }
 
       .header__left p {
@@ -87,7 +93,9 @@
 
       .info__left {
          padding-left: 40px;
-         padding-right: 16px;
+         padding-right: 30px;
+         padding-top: 20px;
+         padding-bottom: 20px;
       }
 
       .info__left h3 {
@@ -107,10 +115,10 @@
       }
 
       .info__right {
-         padding-top: 45px;
-         padding-right: 26px;
-         padding-bottom: 62px;
-         padding-left: 23px;
+         padding-left: 40px;
+         padding-right: 16px;
+         padding-top: 20px;
+         padding-bottom: 20px;
       }
 
       .info__right p {
@@ -130,14 +138,14 @@
       }
 
       .posts {
-         padding-top: 38px;
+         padding-top: 30px;
          padding-right: 53px;
          padding-bottom: 40px;
          padding-left: 53px;
       }
 
       .posts__item {
-         padding-bottom: 40px;
+         padding-bottom: 30px;
       }
 
       .posts__item tr {
@@ -145,9 +153,13 @@
       }
 
       .posts__text {
-         /* padding-top: 12px; */
-         /* padding-bottom: 23px; */
-         padding-left: 25px;
+         padding-top: 10px;
+         padding-bottom: 10px;
+         /* padding-left: 25px; */
+      }
+
+      .posts__photo {
+         padding-right: 25px;
       }
 
       .media a {
@@ -155,44 +167,116 @@
          padding-right: 12px;
          padding-left: 12px;
       }
+
+      @media (max-width: 450px) {
+         .main {
+            width: 340px;
+         }
+
+         .header__left {
+            display: block;
+            /* width: ; */
+         }
+
+         .header__right {
+            display: block;
+            width: 320px;
+            /* text-align: center;
+            padding-left: 40px; */
+         }
+
+         .info {
+            
+         }
+
+         .info__left {
+            display: block;
+            /* padding-bottom: 30px;
+            padding-left: 23px; */
+         }
+
+         .info__right {
+            width: 320px;
+            display: block;
+         }
+
+         .mini-heading {
+            width: 280px;
+         }
+
+         .mobile-none {
+            display: none;
+         }
+
+         .postHeading {
+            width: 100%;
+         }
+
+         .posts table {
+            width: 320px;
+         }
+
+         .posts table {
+            width: 320px;
+         }
+
+         .posts__item td {
+            display: block;
+            width: 90%;
+         }
+
+         .posts__text {
+            /* padding-top: 20px;
+            padding-bottom: 20px; */
+         }
+
+         .posts__photo {
+            /* padding-left: 25px; */
+         }
+
+         .posts__photo img {
+            width: 100%;
+         }
+      }
 	</style>
 </head>
 
 <body style="margin: 0; padding: 0;">
-	<div style="font-size:0px;font-color:#ffffff;opacity:0;visibility:hidden;width:0;height:0;display:none;">Тестовое письмо</div>
+	<!-- <div style="font-size:0px;font-color:#ffffff;opacity:0;visibility:hidden;width:0;height:0;display:none;">Тестовое письмо</div> -->
 	<table cellpadding="0" cellspacing="0" width="100%" bgcolor="#eeeeee">
 		<tr>
          <td>
             <table class="main table-600" cellpadding="0" cellspacing="0" width="600" align="center">
                <tr>
-                  <td height="25" width="600" bgcolor="cd2020"></td>
+                  <td height="25" bgcolor="cd2020"></td>
                </tr>
 
                <tr>
-                  <td bgcolor="#000000" height="275">
-                     <table class="header">
+                  <td bgcolor="#000000">
+                     <table class="header" align="center">
                         <tr>
-                           <td align="left" class="header__left" width="320">
-                              <table style="color: #ffffff;" width="290">
+                           <td align="center" class="header__left">
+                              <table align="center" style="color: #ffffff;" width="290">
                                  <tr style="border-bottom: 1px solid #ffffff;">
-                                    <td align="right">
+                                    <td align="right" class="header__logo">
                                        <img src="https://raw.githubusercontent.com/zarva6596/zarva6596.github.io/master/mail/img/logo.png" alt="logo icon" />
                                     </td>
-                                    <td style="font-size: 22px; line-height: 31px;" width="170px">
+                                    <td style="font-size: 22px; line-height: 31px; padding-left: 20px;" width="170px">
                                        <h3 style="font-family: 'Montserrat', sans-serif;">Лига</p>
                                        <p3 style="font-family: 'Montserrat', sans-serif;">Мастеров</p>
                                     </td>
                                  </tr>
                                  <tr>
                                     <td 
-                                       colspan="2" 
-                                       style="padding-left: 40px; padding-right: 30px; padding-top: 25px;"
+                                       align="center"
+                                       colspan="2"
+                                       style="padding-top: 25px;"
                                     >
                                        <p style="font-family: 'Montserrat', sans-serif; font-size: 12px;">Выведем культуру строительства на европейский уровень!</p>
                                     </td>
                                  </tr>
                                  <tr>
-                                    <td colspan="2" style="padding-left: 40px; padding-top: 18px;">
+                                    <td align="center" colspan="2" style="padding-top: 18px;">
                                        <a 
                                           href="#"
                                           class="header__button"
@@ -205,8 +289,8 @@
                               </table>
                            </td>
 
-                           <td align="left" class="header__right" width="280">
-                              <img align="left" src="https://raw.githubusercontent.com/zarva6596/zarva6596.github.io/master/mail/img/topPhoto.png" alt="header photo" class="header__photo" />
+                           <td align="center" class="header__right" width="280">
+                              <img align="center" src="https://raw.githubusercontent.com/zarva6596/zarva6596.github.io/master/mail/img/topPhoto.png" alt="header photo" class="header__photo" />
                            </td>
                         </tr>
                      </table>
@@ -220,7 +304,7 @@
 
                <tr>
                   <td bgcolor="#ffffff">
-                     <table class="info">
+                     <table class="info" align="center">
                         <tr>
                            <td class="info__left" align="left" width="320">
                               <h3 style="font-family: 'Montserrat', sans-serif;">Привет!</h3>
@@ -248,8 +332,8 @@
                </tr>
 
                <tr>
-                  <td align="center" bgcolor="#ffffff" style="padding-top: 70px; padding-bottom: 3px;">
-                     <table align="center" width="370">
+                  <td align="center" bgcolor="#ffffff" style="padding-top: 40px; padding-bottom: 3px;">
+                     <table align="center" width="370" class="mini-heading">
                         <tr>
                            <td align="center">
                               <p
@@ -261,7 +345,7 @@
                         </tr>
 
                         <tr>
-                           <td>
+                           <td align="center">
                               <p style="font-family: 'Montserrat', sans-serif; font-weight: bold; font-size: 22px; line-height: 31px; color: #000000;">
                                  Обновленный дайджест из 
                               </p>
@@ -272,10 +356,10 @@
                </tr>
 
                <tr>
-                  <td>
+                  <td align="center">
                      <table bgcolor="#ffffff" width="600" class="postHeading">
                         <tr>
-                           <td width="33%">
+                           <td width="33%" class="mobile-none">
                               <span></span>
                            </td>
                            <td align="center">
@@ -285,7 +369,7 @@
                                  4 статей
                               </p>
                            </td>
-                           <td width="33%">
+                           <td width="33%" class="mobile-none">
                               <span></span>
                            </td>
                         </tr>
@@ -295,18 +379,18 @@
 
                <tr>
                   <td bgcolor="#ffffff" class="posts">
-                     <table width="495px" align="center">
+                     <table width="495px">
                         <tr>
                            <td class="posts__item">
                               <table>
                                  <tr>
                                     <td width="50%" class="posts__photo">
-                                       <img 
+                                       <img
                                           src="https://raw.githubusercontent.com/zarva6596/zarva6596.github.io/master/mail/img/1.png" 
                                           alt="post photo"
                                        >
                                     </td>
-            
+
                                     <td width="50%" class="posts__text">
                                        <p
                                           style="font-family: 'Montserrat', sans-serif;font-weight: 300; font-size: 10px; line-height: 12px; color: #C1C8CE; padding-bottom: 5px;"
@@ -323,7 +407,7 @@
                                        >
                                           Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                                        </p>
-                                       <a 
+                                       <a
                                           href="#"
                                           style="font-family: 'Montserrat', sans-serif; display: inline-block;font-weight: 600;font-size: 10px;line-height: 150%;letter-spacing: 0.17em;color: #CD2020;padding-top: 4px;padding-right: 13px;padding-bottom: 4px;padding-left: 13px;border: 1px solid #cd2020;text-decoration: none;"
                                        >
@@ -418,7 +502,7 @@
                               <table>
                                  <tr>
                                     <td width="50%" class="posts__photo">
-                                       <img 
+                                       <img
                                           src="https://raw.githubusercontent.com/zarva6596/zarva6596.github.io/master/mail/img/4.png" 
                                           alt="post photo"
                                        >
@@ -473,21 +557,21 @@
                   <td bgcolor="#cd2020" align="center" style="padding-bottom: 12px;" class="media">
                      <a href="#">
                         <img 
-                           src="https://raw.githubusercontent.com/zarva6596/zarva6596.github.io/master/mail/img/youtube.svg" 
+                           src="https://raw.githubusercontent.com/zarva6596/zarva6596.github.io/master/mail/img/youtube.png" 
                            alt="youtube icon"
                         >
                      </a>
 
                      <a href="#">
                         <img 
-                           src="https://raw.githubusercontent.com/zarva6596/zarva6596.github.io/master/mail/img/facebook.svg" 
+                           src="https://raw.githubusercontent.com/zarva6596/zarva6596.github.io/master/mail/img/facebook.png" 
                            alt="facebook icon"
                         >
                      </a>
 
                      <a href="#">
                         <img 
-                           src="https://raw.githubusercontent.com/zarva6596/zarva6596.github.io/master/mail/img/instagram.svg" 
+                           src="https://raw.githubusercontent.com/zarva6596/zarva6596.github.io/master/mail/img/instagram.png" 
                            alt="instagram icon"
                         >
                      </a>
